--- a/style.css
+++ b/style.css
@@ -199,6 +199,7 @@ span {
 .projects {
     flex-wrap: wrap;
     gap: 1rem;
+    cursor: pointer;
 }
 
 
@@ -248,7 +249,7 @@ span {
 .project img {
     border: 0rem;
     width: 100%;
-    height: 100%;
+    height: 40vh;
     object-fit: contain;
     margin-bottom: .4rem;
 }
